--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hahmed",
-  "homepage": "https://hahmed149.github.io/hahmed149",
+  "homepage": "https://www.hahmed.dev",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
